make the slider better

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
     <button><i class="arrow left"></i></button>
-    <img src="1.jpg" class="main">
+    <img src="img/1.jpg" class="main">
     <button><i class="arrow right"></i></button>
     </div>
 </body>
