end the slider, but i will continue to develop it

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <div class="wrapper">
     <button><i class="arrow left"></i></button>
+    <img src="img/3.jpg" class="side leftSide">
     <img src="img/1.jpg" class="main">
+    <img src="img/2.jpg" class="side rightSide">
     <button><i class="arrow right"></i></button>
     </div>
 </body>
